7-25 fixed profile alignment for profile text

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -24,7 +24,7 @@
   font-size: 42px;
   line-height: 48px;
   box-sizing: border-box;
-  /* margin-top: 16px; */
+  margin-top: 16px;
   margin-bottom: 0;
   text-overflow: ellipsis;
   white-space: nowrap;
